# xe-do-line-tranh-vat-can

./: README.md
arduino_car/: arduino_car.ino
esp32_bluetooth_bridge/: esp32_bluetooth_bridge.ino
esp32_robot_car/: esp32_robot_car.ino
qt_interface/: CMakeLists.txt  RobotControl.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
wifi_robot_car_system/esp32_wifi_car/: esp32_wifi_car.ino
wifi_robot_car_system/qt_wifi_interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
